// 指定语法版本
syntax = "proto3";

// 定义proto报名，用于防止命名冲突
package user;

// 生成go代码的路径
option go_package = "./user";

message BaseResponse {
  int32 code = 1;
  string message = 2;
}

// 注册的请求体
message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

// 注册的返回体
message RegisterResponse {
  BaseResponse base = 1;
  uint64 user_id = 2;
}

// 登录请求体
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录的返回体
message LoginResponse {
  BaseResponse base = 1;
  string token = 2;
  UserInfo user = 3;
}

message UserInfo {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string create_at = 4;
  string update_at = 5;
}

message GetUserRequest {
  uint64 user_id = 1;
}

message GetUserResponse {
  BaseResponse base = 1;
  UserInfo user = 2;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}